# UDP-Audio-Pipeline

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: release.yml
apps/: lossy_audio_lab.cpp  udp_audio_dsp_bench.cpp  udp_audio_imgui_lab.cpp  udp_audio_loopback.cpp  udp_audio_miniaudio_playback.cpp  udp_audio_opus_loopback.cpp  udp_audio_smoke.cpp
cmake/: CompilerWarnings.cmake
docs/: IMPAIRMENT_PRESETS.md  JITTER_BUFFER.md  OPUS_REDUNDANCY.md  PERFORMANCE.md  PLC_COMPARISON.md  PROJECT_BRIEF.md  RELEASE.md
include/udp_audio/: version.hpp
include/udp_audio/audio/: frame.hpp  frame_playback_queue.hpp  source.hpp  wav_writer.hpp
include/udp_audio/codec/: opus_packet.hpp
include/udp_audio/concurrency/: spsc_ring_buffer.hpp
include/udp_audio/dsp/: gain.hpp  plc.hpp
include/udp_audio/jitter/: adaptive_jitter_buffer.hpp  fixed_jitter_buffer.hpp
include/udp_audio/protocol/: packet.hpp
include/udp_audio/sim/: opus_playout_sim.hpp
include/udp_audio/transport/: udp_socket.hpp
src/: version.cpp
src/audio/: frame.cpp  source.cpp  wav_writer.cpp
src/codec/: opus_packet.cpp
src/dsp/: gain.cpp  gain_avx2.cpp  gain_neon.cpp  gain_scalar.cpp  plc.cpp
src/protocol/: packet.cpp
src/sim/: opus_playout_sim.cpp
src/transport/: udp_socket.cpp
tests/: test_audio_frame.cpp  test_audio_io.cpp  test_dsp.cpp  test_fixed_jitter_buffer.cpp  test_main.cpp  test_opus_packet.cpp  test_opus_sim.cpp  test_packet.cpp  test_plc.cpp  test_spsc_ring_buffer.cpp  test_udp_socket.cpp
